Reestruturação de banco e de segurança